Integração da pesquisa de produto com o servidor. Layout bugado.

--- a/src/pages/busca/busca.scss
+++ b/src/pages/busca/busca.scss
@@ -16,6 +16,5 @@ page-busca {
         position: relative; 
         background: none;
         opacity: .90; /* Set the opacity for a slightly transparent Google Form */ 
-        color: white;
     }
 }
